# fashttp-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  codegen.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodePanel.tsx  HistoryPanel.tsx  ProfileDropdown.tsx  RequestPanel.tsx  ResponsePanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TopBar.tsx
